<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Notification Scheduler</string>
    <string name="network_type_required">Network Type Required:</string>
    <string name="none">None</string>
    <string name="any">Any</string>
    <string name="wifi">Wifi</string>
    <string name="requires">Requires:</string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device Charging</string>
    <string name="override_deadline">Override Deadline:</string>
    <string name="not_set">Not set</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_jobs">Cancel Jobs</string>
    <string name="job_scheduled">Job Scheduled</string>
    <string name="jobs_cancelled">Jobs Cancelled</string>
    <string name="no_constraint_toast">Please set at least one constraint</string>
</resources>